<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.steplifeapp.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.steplifeapp.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.steplifeapp.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.steplifeapp.ui.ProfileFragment"
        android:label="fragment_profile"
        tools:layout="@layout/fragment_profile" >
        <action
            android:id="@+id/action_navigation_profile_to_registrationFragment"
            app:destination="@id/navigation_registration"
            app:enterAnim="@anim/slide_right"
            app:exitAnim="@anim/slide_out_left"
            app:launchSingleTop="true"
            app:popEnterAnim="@anim/slide_left"
            app:popExitAnim="@anim/slide_out_right" />
        <action
            android:id="@+id/action_navigation_profile_to_userProfileFragment"
            app:destination="@id/userProfileFragment" />
    </fragment>
    <fragment
        android:id="@+id/navigation_registration"
        android:name="com.example.steplifeapp.ui.RegistrationFragment"
        android:label="fragment_registration"
        tools:layout="@layout/fragment_registration" />
    <fragment
        android:id="@+id/downloadArticle"
        android:name="com.example.steplifeapp.ui.DownloadArticle"
        android:label="fragment_download_article"
        tools:layout="@layout/fragment_download_article" />
    <fragment
        android:id="@+id/userProfileFragment"
        android:name="com.example.steplifeapp.ui.userProfileFragment"
        android:label="fragment_user_profile"
        tools:layout="@layout/fragment_user_profile" >
        <action
            android:id="@+id/action_userProfileFragment_to_navigation_profile"
            app:destination="@id/navigation_profile"
            app:enterAnim="@anim/slide_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>
</navigation>