<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".StafFunction.Edit.EditArticlesActiviti">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="40dp">
            <ImageView

                android:clickable="true"
                android:id="@+id/imagebackEditArticles"
                android:layout_width="40dp"
                android:padding="6dp"
                android:layout_gravity="right|center_vertical"
                android:layout_height="40dp"
                android:src="@drawable/close24px"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginTop="7dp"
                android:layout_marginLeft="10dp"
                android:fontFamily="@font/montserratsemibold"
                android:gravity="left"
                android:text="@string/EditMaterial"
                android:textColor="@color/BlackSviut"
                android:textSize="16sp" />
        </FrameLayout>





        <FrameLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <Button
                    android:id="@+id/PublicationArticleButton"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:gravity="center"
                    app:icon="@drawable/draw24px"
                    app:iconTint = "@color/white"
                    android:layout_marginRight="25dp"
                    android:layout_marginLeft="25dp"
                    android:textSize="12dp"
                    android:textColor="@color/white"
                    android:backgroundTint="@color/MainBlue"
                    android:layout_gravity="bottom"
                    android:fontFamily="@font/montserratsemibold"
                    android:text="@string/Publishmaterial"/>

                <Button
                    android:id="@+id/HomeArticleRedactButton"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:gravity="center"
                    app:icon="@drawable/home24px"
                    app:iconTint = "@color/white"
                    android:layout_marginRight="25dp"
                    android:layout_marginLeft="25dp"
                    android:textSize="12dp"
                    android:textColor="@color/white"
                    android:backgroundTint="@color/MainBlue"
                    android:layout_gravity="bottom"
                    android:fontFamily="@font/montserratsemibold"
                    android:text="@string/ArticleHomePage"/>

                <Button
                    android:id="@+id/TopPostRedactButton"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:gravity="center"
                    android:layout_marginRight="25dp"
                    android:layout_marginLeft="25dp"
                    app:icon="@drawable/school24px"
                    app:iconTint = "@color/white"
                    android:textSize="12dp"
                    android:textColor="@color/white"
                    android:backgroundTint="@color/MainBlue"
                    android:layout_gravity="bottom"
                    android:fontFamily="@font/montserratsemibold"
                    android:text="@string/WalkSchool"/>

                <Button
                    android:id="@+id/AddTagsButton"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:gravity="center"
                    app:icon="@drawable/sort24px"
                    app:iconTint = "@color/white"
                    android:layout_marginRight="25dp"
                    android:layout_marginLeft="25dp"
                    android:textSize="12dp"
                    android:textColor="@color/white"
                    android:backgroundTint="@color/MainBlue"
                    android:layout_gravity="bottom"
                    android:fontFamily="@font/montserratsemibold"
                    android:text="@string/Tags"/>

                <Button
                    android:id="@+id/AddSectionButton"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:gravity="center"
                    app:icon="@drawable/steps24px"
                    app:iconTint = "@color/white"
                    android:layout_marginRight="25dp"
                    android:layout_marginLeft="25dp"
                    android:textSize="12dp"
                    android:textColor="@color/white"
                    android:backgroundTint="@color/MainBlue"
                    android:layout_gravity="bottom"
                    android:fontFamily="@font/montserratsemibold"
                    android:text="Добавление разделов"/>
                <Button
                    android:id="@+id/DeleteSectionButton"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:gravity="center"
                    app:icon="@drawable/steps24px"
                    app:iconTint = "@color/white"
                    android:layout_marginRight="25dp"
                    android:layout_marginLeft="25dp"
                    android:textSize="12dp"
                    android:textColor="@color/white"
                    android:backgroundTint="@color/MainBlue"
                    android:layout_gravity="bottom"
                    android:fontFamily="@font/montserratsemibold"
                    android:text="Удаление, редиктирование разделов"/>


            </LinearLayout>
        </FrameLayout>

    </LinearLayout>
</FrameLayout>