<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/MainGray"
    xmlns:app="http://schemas.android.com/apk/res-auto"
   >

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">

        <androidx.legacy.widget.Space
            android:layout_width="match_parent"
            android:layout_height="24dp"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:rotationY="180"
                android:id="@+id/BacktoSettings"
                android:layout_gravity="left"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="4dp"
                android:padding="5dp"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/arrow_forward_ios24px" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/montserratsemibold"
                android:gravity="left"
                android:text="О программе"
                android:textColor="@color/BlackSviut"
                android:textSize="18sp" />
        </FrameLayout>

        <androidx.cardview.widget.CardView
            android:layout_marginTop="200dp"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            app:cardCornerRadius="15dp">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@mipmap/main_logo_steplife"/>
        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/nulshockbd"
            android:text="STEPLIFE"
            android:textSize="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />





        <FrameLayout
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:layout_height="120dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

            <LinearLayout
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="0dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textSize="13dp"
                    android:textColor="@color/BlackSviut"
                    android:fontFamily="@font/montserrat_medium"
                    android:text="Версия: "/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textSize="15dp"
                    android:fontFamily="@font/montserrat_semibold"
                    android:textColor="@color/BlackSviut"
                    android:text="@string/VersionApp"/>
            </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textSize="12dp"
                    android:textColor="@color/BlackSviut"
                    android:fontFamily="@font/montserrat_medium"

                    android:text="@string/Developer"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textSize="12dp"
                    android:textColor="@color/BlackSviut"
                    android:fontFamily="@font/montserrat_medium"
                    android:text="@string/BuildDate"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
android:layout_marginTop="20dp"
                    android:textSize="14dp"
                    android:textColor="@color/MainGrayText"
                    android:fontFamily="@font/montserrat_medium"
                    android:text="@string/AllRights"/>
            </LinearLayout>
        </FrameLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/UserAgreementButton"
            android:foreground="?attr/selectableItemBackground"
            android:clickable="true"
            android:layout_width="300dp"
            app:cardCornerRadius="8dp"
            android:layout_marginTop="100dp"
            android:layout_gravity="center"
            android:layout_height="55dp">

                <TextView
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserratsemibold"
                    android:textColor="@color/MainBlue"
                    android:textSize="13dp"
                    android:text="Пользовательское соглашение"/>



        </androidx.cardview.widget.CardView>

    </LinearLayout>

</FrameLayout>